Remove unused rules updates
