# proto/gen/api/v1/api.pb.validate.go
@@ -3088,257 +3088,6 @@ var _ interface {
 	ErrorName() string
 } = UpdateDNSBlockListsResponseValidationError{}
 
-// Validate checks the field values on UpdateDNSFilteringRulesRequest with the
-// rules defined in the proto definition for this message. If any rules are
-// violated, the first error encountered is returned, or nil if there are no violations.
-func (m *UpdateDNSFilteringRulesRequest) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on UpdateDNSFilteringRulesRequest with
-// the rules defined in the proto definition for this message. If any rules
-// are violated, the result is a list of violation errors wrapped in
-// UpdateDNSFilteringRulesRequestMultiError, or nil if none found.
-func (m *UpdateDNSFilteringRulesRequest) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *UpdateDNSFilteringRulesRequest) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	if utf8.RuneCountInString(m.GetName()) < 1 {
-		err := UpdateDNSFilteringRulesRequestValidationError{
-			field:  "Name",
-			reason: "value length must be at least 1 runes",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	for idx, item := range m.GetRules() {
-		_, _ = idx, item
-
-		if all {
-			switch v := interface{}(item).(type) {
-			case interface{ ValidateAll() error }:
-				if err := v.ValidateAll(); err != nil {
-					errors = append(errors, UpdateDNSFilteringRulesRequestValidationError{
-						field:  fmt.Sprintf("Rules[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			case interface{ Validate() error }:
-				if err := v.Validate(); err != nil {
-					errors = append(errors, UpdateDNSFilteringRulesRequestValidationError{
-						field:  fmt.Sprintf("Rules[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			}
-		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
-			if err := v.Validate(); err != nil {
-				return UpdateDNSFilteringRulesRequestValidationError{
-					field:  fmt.Sprintf("Rules[%v]", idx),
-					reason: "embedded message failed validation",
-					cause:  err,
-				}
-			}
-		}
-
-	}
-
-	if len(errors) > 0 {
-		return UpdateDNSFilteringRulesRequestMultiError(errors)
-	}
-
-	return nil
-}
-
-// UpdateDNSFilteringRulesRequestMultiError is an error wrapping multiple
-// validation errors returned by UpdateDNSFilteringRulesRequest.ValidateAll()
-// if the designated constraints aren't met.
-type UpdateDNSFilteringRulesRequestMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m UpdateDNSFilteringRulesRequestMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m UpdateDNSFilteringRulesRequestMultiError) AllErrors() []error { return m }
-
-// UpdateDNSFilteringRulesRequestValidationError is the validation error
-// returned by UpdateDNSFilteringRulesRequest.Validate if the designated
-// constraints aren't met.
-type UpdateDNSFilteringRulesRequestValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e UpdateDNSFilteringRulesRequestValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e UpdateDNSFilteringRulesRequestValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e UpdateDNSFilteringRulesRequestValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e UpdateDNSFilteringRulesRequestValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e UpdateDNSFilteringRulesRequestValidationError) ErrorName() string {
-	return "UpdateDNSFilteringRulesRequestValidationError"
-}
-
-// Error satisfies the builtin error interface
-func (e UpdateDNSFilteringRulesRequestValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sUpdateDNSFilteringRulesRequest.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = UpdateDNSFilteringRulesRequestValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = UpdateDNSFilteringRulesRequestValidationError{}
-
-// Validate checks the field values on UpdateDNSFilteringRulesResponse with the
-// rules defined in the proto definition for this message. If any rules are
-// violated, the first error encountered is returned, or nil if there are no violations.
-func (m *UpdateDNSFilteringRulesResponse) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on UpdateDNSFilteringRulesResponse with
-// the rules defined in the proto definition for this message. If any rules
-// are violated, the result is a list of violation errors wrapped in
-// UpdateDNSFilteringRulesResponseMultiError, or nil if none found.
-func (m *UpdateDNSFilteringRulesResponse) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *UpdateDNSFilteringRulesResponse) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	if len(errors) > 0 {
-		return UpdateDNSFilteringRulesResponseMultiError(errors)
-	}
-
-	return nil
-}
-
-// UpdateDNSFilteringRulesResponseMultiError is an error wrapping multiple
-// validation errors returned by UpdateDNSFilteringRulesResponse.ValidateAll()
-// if the designated constraints aren't met.
-type UpdateDNSFilteringRulesResponseMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m UpdateDNSFilteringRulesResponseMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m UpdateDNSFilteringRulesResponseMultiError) AllErrors() []error { return m }
-
-// UpdateDNSFilteringRulesResponseValidationError is the validation error
-// returned by UpdateDNSFilteringRulesResponse.Validate if the designated
-// constraints aren't met.
-type UpdateDNSFilteringRulesResponseValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e UpdateDNSFilteringRulesResponseValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e UpdateDNSFilteringRulesResponseValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e UpdateDNSFilteringRulesResponseValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e UpdateDNSFilteringRulesResponseValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e UpdateDNSFilteringRulesResponseValidationError) ErrorName() string {
-	return "UpdateDNSFilteringRulesResponseValidationError"
-}
-
-// Error satisfies the builtin error interface
-func (e UpdateDNSFilteringRulesResponseValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sUpdateDNSFilteringRulesResponse.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = UpdateDNSFilteringRulesResponseValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = UpdateDNSFilteringRulesResponseValidationError{}
-
 // Validate checks the field values on TunnelConfig with the rules defined in
 // the proto definition for this message. If any rules are violated, the first
 // error encountered is returned, or nil if there are no violations.
@@ -4141,40 +3890,6 @@ func (m *AdGuardConfig) validate(all bool) error {
 			if err := v.Validate(); err != nil {
 				return AdGuardConfigValidationError{
 					field:  fmt.Sprintf("BlockLists[%v]", idx),
-					reason: "embedded message failed validation",
-					cause:  err,
-				}
-			}
-		}
-
-	}
-
-	for idx, item := range m.GetRules() {
-		_, _ = idx, item
-
-		if all {
-			switch v := interface{}(item).(type) {
-			case interface{ ValidateAll() error }:
-				if err := v.ValidateAll(); err != nil {
-					errors = append(errors, AdGuardConfigValidationError{
-						field:  fmt.Sprintf("Rules[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			case interface{ Validate() error }:
-				if err := v.Validate(); err != nil {
-					errors = append(errors, AdGuardConfigValidationError{
-						field:  fmt.Sprintf("Rules[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			}
-		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
-			if err := v.Validate(); err != nil {
-				return AdGuardConfigValidationError{
-					field:  fmt.Sprintf("Rules[%v]", idx),
 					reason: "embedded message failed validation",
 					cause:  err,
 				}
@@ -6730,17 +6445,6 @@ func (m *AdGuardConfig_BlockList) validate(all bool) error {
 
 	var errors []error
 
-	if m.GetId() < 0 {
-		err := AdGuardConfig_BlockListValidationError{
-			field:  "Id",
-			reason: "value must be greater than or equal to 0",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
 	if utf8.RuneCountInString(m.GetName()) < 1 {
 		err := AdGuardConfig_BlockListValidationError{
 			field:  "Name",
@@ -6772,8 +6476,6 @@ func (m *AdGuardConfig_BlockList) validate(all bool) error {
 		}
 		errors = append(errors, err)
 	}
-
-	// no validation rules for Enabled
 
 	if len(errors) > 0 {
 		return AdGuardConfig_BlockListMultiError(errors)
@@ -6854,119 +6556,6 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = AdGuardConfig_BlockListValidationError{}
-
-// Validate checks the field values on AdGuardConfig_Rule with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the first error encountered is returned, or nil if there are no violations.
-func (m *AdGuardConfig_Rule) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on AdGuardConfig_Rule with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the result is a list of violation errors wrapped in
-// AdGuardConfig_RuleMultiError, or nil if none found.
-func (m *AdGuardConfig_Rule) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *AdGuardConfig_Rule) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	if utf8.RuneCountInString(m.GetRule()) < 1 {
-		err := AdGuardConfig_RuleValidationError{
-			field:  "Rule",
-			reason: "value length must be at least 1 runes",
-		}
-		if !all {
-			return err
-		}
-		errors = append(errors, err)
-	}
-
-	if len(errors) > 0 {
-		return AdGuardConfig_RuleMultiError(errors)
-	}
-
-	return nil
-}
-
-// AdGuardConfig_RuleMultiError is an error wrapping multiple validation errors
-// returned by AdGuardConfig_Rule.ValidateAll() if the designated constraints
-// aren't met.
-type AdGuardConfig_RuleMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m AdGuardConfig_RuleMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m AdGuardConfig_RuleMultiError) AllErrors() []error { return m }
-
-// AdGuardConfig_RuleValidationError is the validation error returned by
-// AdGuardConfig_Rule.Validate if the designated constraints aren't met.
-type AdGuardConfig_RuleValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e AdGuardConfig_RuleValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e AdGuardConfig_RuleValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e AdGuardConfig_RuleValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e AdGuardConfig_RuleValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e AdGuardConfig_RuleValidationError) ErrorName() string {
-	return "AdGuardConfig_RuleValidationError"
-}
-
-// Error satisfies the builtin error interface
-func (e AdGuardConfig_RuleValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sAdGuardConfig_Rule.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = AdGuardConfig_RuleValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = AdGuardConfig_RuleValidationError{}
 
 // Validate checks the field values on AdGuardStatus_QueryLog with the rules
 // defined in the proto definition for this message. If any rules are
