# proto/gen/api/v1/api.swagger.json
@@ -322,71 +322,17 @@
           "TunnelService"
         ]
       }
-    },
-    "/tunnels/{name}/dns_filtering_rules": {
-      "put": {
-        "operationId": "TunnelService_UpdateDNSFilteringRules",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1UpdateDNSFilteringRulesResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "name",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "rules": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "$ref": "#/definitions/v1AdGuardConfigRule"
-                  }
-                }
-              }
-            }
-          }
-        ],
-        "tags": [
-          "TunnelService"
-        ]
-      }
     }
   },
   "definitions": {
     "AdGuardConfigBlockList": {
       "type": "object",
       "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int32"
-        },
         "name": {
           "type": "string"
         },
         "url": {
           "type": "string"
-        },
-        "enabled": {
-          "type": "boolean"
         }
       }
     },
@@ -410,7 +356,7 @@
           "type": "array",
           "items": {
             "type": "object",
-            "$ref": "#/definitions/AdGuardStatusQueryLogRule"
+            "$ref": "#/definitions/QueryLogRule"
           }
         },
         "client": {
@@ -445,21 +391,6 @@
       },
       "required": [
         "status"
-      ]
-    },
-    "AdGuardStatusQueryLogRule": {
-      "type": "object",
-      "properties": {
-        "filter_id": {
-          "type": "string",
-          "format": "int64"
-        },
-        "text": {
-          "type": "string"
-        }
-      },
-      "required": [
-        "text"
       ]
     },
     "ClusterK3d": {
@@ -595,6 +526,21 @@
         "type"
       ]
     },
+    "QueryLogRule": {
+      "type": "object",
+      "properties": {
+        "filter_id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "text": {
+          "type": "string"
+        }
+      },
+      "required": [
+        "text"
+      ]
+    },
     "ResponseAnswer": {
       "type": "object",
       "properties": {
@@ -719,21 +665,6 @@
             "type": "object",
             "$ref": "#/definitions/AdGuardConfigBlockList"
           }
-        },
-        "rules": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/v1AdGuardConfigRule"
-          }
-        }
-      }
-    },
-    "v1AdGuardConfigRule": {
-      "type": "object",
-      "properties": {
-        "rule": {
-          "type": "string"
         }
       }
     },
@@ -963,9 +894,6 @@
       "type": "object"
     },
     "v1UpdateDNSFilteringEnabledResponse": {
-      "type": "object"
-    },
-    "v1UpdateDNSFilteringRulesResponse": {
       "type": "object"
     },
     "v1WireGuardConfig": {
