# proto/gen/api/v1/swagger/models/v1_ad_guard_config_rule.go
@@ -1,50 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// V1AdGuardConfigRule v1 ad guard config rule
-//
-// swagger:model v1AdGuardConfigRule
-type V1AdGuardConfigRule struct {
-
-	// rule
-	Rule string `json:"rule,omitempty"`
-}
-
-// Validate validates this v1 ad guard config rule
-func (m *V1AdGuardConfigRule) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// ContextValidate validates this v1 ad guard config rule based on context it is used
-func (m *V1AdGuardConfigRule) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *V1AdGuardConfigRule) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *V1AdGuardConfigRule) UnmarshalBinary(b []byte) error {
-	var res V1AdGuardConfigRule
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
