# proto/gen/api/v1/swagger/models/v1_update_dns_filtering_rules_response.go
@@ -1,11 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-// V1UpdateDNSFilteringRulesResponse v1 update DNS filtering rules response
-//
-// swagger:model v1UpdateDNSFilteringRulesResponse
-type V1UpdateDNSFilteringRulesResponse interface{}
